# project_euromir

new/: test_aa.py  test_aa2.py  test_aa3.py  test_aa_on_cg.py  test_bfgs_on_f.py  test_cg_reorthogonalize.py  test_lanczos.py  test_new_algorithm.py  test_update.py
new/cqr/: cvxpy_interface.py  solver.py  test.py
old/: pyproject.toml
